# softwareaccounting

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Changelog.md  README.md  developer.txt  mkdocs.yml  pylintrc  pyproject.toml  sams-aggregator.py  sams-aggregator.yaml  sams-collector.py  sams-collector.yaml  sams-post-receiver.py  sams-post-receiver.yaml  sams-software-extractor.py  sams-software-extractor.yaml  sams-software-updater.py  sams-software-updater.yaml  setup.py
.github/workflows/: docs.yml  release.yml
contrib/: README.md  add-slurminfo.py  sams-reporter.py
devel_scripts/: check_code  fixcode
docs/: configuration.md  flow.dia  index.md  installation.md  logging.md  overview.md  sams-aggregator.md  sams-collector.md  sams-faq.md  sams-post-receiver.md  sams-software-extractor.md  sams-software-updater.md  sams-software.md
docs/aggregator/: SoftwareAccounting.md  SoftwareAccountingPW.md
docs/backend/: SoftwareAccounting.md  SoftwareAccountingPW.md
docs/example_configuration/: sams-software-extractor.yaml  sams-software-updater.yaml
docs/listener/: Prometheus.md
docs/loader/: File.md  FileSlurmInfoFallback.md
docs/output/: File.md  Http.md  Prometheus.md
docs/pidfinder/: Slurm.md
docs/releasenotes/: 1.0.md  1.1.md  1.10.md  1.2.md  1.3.md  1.4.md  1.5.md  1.6.md  1.7.md  1.8.md  1.9.md
docs/sampler/: Core.md  FSStats.md  IOStats.md  NvidiaSMI.md  Pressure.md  SlurmCGroup.md  SlurmCGroup2.md  SlurmInfo.md  Software.md  ZFSStats.md
docs/software/: Regexp.md
extras/: README.md
extras/convert/: README.md  convert.py  convert.yaml
sams/: __init__.py  base.py  core.py  setfsuid.py
sams/aggregator/: SoftwareAccounting.py  SoftwareAccountingPW.py
sams/backend/: SoftwareAccounting.py  SoftwareAccountingPW.py
scripts/: sams-aggregator.py  sams-collector.py  sams-post-receiver.py  sams-software-extractor.py  sams-software-updater.py
(+38 files in other folders)
